@@ -1,12 +1,14 @@
 # spatial-semantic-browser Apache Configuration
 
-<Directory /usr/share/spatial-semantic-browser>
+<Directory /usr/share/semmap>
     # needed for following configs and linked libs
     Options +FollowSymLinks
     AllowOverride None
 </Directory>
 
-Alias /ssb /usr/share/spatial-semantic-browser
-ProxyPass /sparql http://localhost:8890/sparql
-ProxyPassReverse /sparql http://localhost:8890/sparql
+Alias /semmap /usr/share/semmap
+
+# Proxying is now done via a PHP script which ships with semmap
+#ProxyPass /sparql http://localhost:8890/sparql
+#ProxyPassReverse /sparql http://localhost:8890/sparql
 
