@@ -1,0 +1,136 @@
+
+			<div id="header-language">
+				<div class="region region-header-language">
+					<div id="block-lang-dropdown-language"
+						class="block block-lang-dropdown">
+
+
+						<div class="content">
+							<form action="/open-data/" method="post" id="lang-dropdown-form"
+								accept-charset="UTF-8">
+								<div>
+									<div
+										class="form-item form-type-select form-item-lang-dropdown-select">
+										<select style="width: 140px"
+											class="lang-dropdown-select-element form-select"
+											id="edit-lang-dropdown-select" name="lang_dropdown_select"><option
+												value="bg">Български (bg)</option>
+											<option value="cs">čeština (cs)</option>
+											<option value="da">dansk (da)</option>
+											<option value="de">Deutsch (de)</option>
+											<option value="el">ελληνικά (el)</option>
+											<option value="en" selected="selected">English (en)</option>
+											<option value="es">español (es)</option>
+											<option value="et">eesti keel (et)</option>
+											<option value="fi">suomi (fi)</option>
+											<option value="fr">français (fr)</option>
+											<option value="ga">Gaeilge (ga)</option>
+											<option value="hu">magyar (hu)</option>
+											<option value="it">Italiano (it)</option>
+											<option value="lt">lietuvių kalba (lt)</option>
+											<option value="lv">latviešu valoda (lv)</option>
+											<option value="mt">Malti (mt)</option>
+											<option value="nl">Nederlands (nl)</option>
+											<option value="pl">polski (pl)</option>
+											<option value="pt">português (pt)</option>
+											<option value="ro">română (ro)</option>
+											<option value="sk">slovenčina (sk)</option>
+											<option value="sl">slovenščina (sl)</option>
+											<option value="sv">svenska (sv)</option>
+										</select>
+
+									</div>
+									<input type="hidden" name="bg" value="/open-data/bg" /> <input
+										type="hidden" name="cs" value="/open-data/cs" /> <input
+										type="hidden" name="da" value="/open-data/da" /> <input
+										type="hidden" name="de" value="/open-data/de" /> <input
+										type="hidden" name="el" value="/open-data/el" /> <input
+										type="hidden" name="en" value="/open-data/" /> <input
+										type="hidden" name="es" value="/open-data/es" /> <input
+										type="hidden" name="et" value="/open-data/et" /> <input
+										type="hidden" name="fi" value="/open-data/fi" /> <input
+										type="hidden" name="fr" value="/open-data/fr" /> <input
+										type="hidden" name="ga" value="/open-data/ga" /> <input
+										type="hidden" name="hu" value="/open-data/hu" /> <input
+										type="hidden" name="it" value="/open-data/it" /> <input
+										type="hidden" name="lt" value="/open-data/lt" /> <input
+										type="hidden" name="lv" value="/open-data/lv" /> <input
+										type="hidden" name="mt" value="/open-data/mt" /> <input
+										type="hidden" name="nl" value="/open-data/nl" /> <input
+										type="hidden" name="pl" value="/open-data/pl" /> <input
+										type="hidden" name="pt" value="/open-data/pt" /> <input
+										type="hidden" name="ro" value="/open-data/ro" /> <input
+										type="hidden" name="sk" value="/open-data/sk" /> <input
+										type="hidden" name="sl" value="/open-data/sl" /> <input
+										type="hidden" name="sv" value="/open-data/sv" />
+									<noscript>
+										<span> <input type="submit" id="edit-submit" name="op"
+											value="Go" class="form-submit" />
+										</span>
+									</noscript>
+									<input type="hidden" name="form_build_id"
+										value="form-RpEpyK4TSCcjk3DP9PeLVzO7QEeXQf0mDY5kgd5rshM" /> <input
+										type="hidden" name="form_id" value="lang_dropdown_form" />
+								</div>
+							</form>
+						</div>
+					</div>
+				</div>
+			</div>
+
+			<div id="header-menu">
+				<div class="region region-header-menu">
+					<div id="block-menu-menu-service-menu" class="block block-menu">
+
+
+						<div class="content">
+							<ul class="menu">
+<!-- 								<li class="first leaf"><a href="/open-data/user/login" title="">-&gt;CMS</a></li> -->
+								<li class="first leaf"><a id="org.ec.odp.ssb.ui.label.legal-notice" href="http://ec.europa.eu/geninfo/legal_notices_en.htm" title="">Legal Notice</a></li>
+								<li class="leaf"><a href="/open-data/contact" title=""><span id="org.ec.odp.ssb.ui.label.contact">Contact</span></a></li>
+								<li class="last leaf"><a href="http://ec.europa.eu/geninfo/query/search_en.html" title=""><span id="org.ec.odp.ssb.ui.label.search">Search</span></a></li>
+							</ul>
+						</div>
+
+					</div>
+				</div>
+			</div>
+			<div class="logo">
+				<a id="logo" rel="Home" title="Home" href="/open-data/"> <img
+					alt="Home"
+					src="src/main/resources/images/logo_en.gif" />
+				</a>
+			</div>
+			<div id="header-title">
+				<a href="/open-data/" title="Home">Data Portal</a>
+
+			</div>
+			<div id="header-subtitle">The Open Data Hub of the European Union</div>
+
+			<!--
+			<img src="src/main/resources/images/logo_european_commision.gif"
+				id="header-logo" />
+			<div id="header-headline">
+				<a href="">Open Data Portal</a>
+			</div>
+			<div id="header-abstract">Spatial Browser</div>
+			<div id="header-menu-right">
+				<a id="org.ec.odp.ssb.ui.label.legal-notice" href="#">Legal Notice</a>
+				| <a href="#"><span id="org.ec.odp.ssb.ui.label.contact">Contact</span>
+				</a> | <a href="#"><span id="org.ec.odp.ssb.ui.label.search">Search</span>
+				</a> <select name="lang" id="language-switcher">
+					<option value="#">Čeština</option>
+					<option value="#">Dansk</option>
+					<option value="de">Deutsch</option>
+					<option value="#">Ελληνικά</option>
+					<option value="en" selected="selected">English</option>
+					<option value="#">Eesti</option>
+					<option value="#">Español</option>
+					<option value="#">Français</option>
+					<option value="#">Gaeilge</option>
+				</select>
+			</div>
+			<div id="header-blueblock">&nbsp;</div>
+
+-->
+
