@@ -1,9 +1,15 @@
+semmap (0.9.1) lod2; urgency=low
+
+  * Improved visuals of markers and massive marker indicators
+  * Several stability improvements regarding generated queries
+
+ -- Claus Stadler <cstadler@informatik.uni-leipzig.de>  Fri, 22 Nov 2012 19:52:38 +0100
+
 semmap (0.9.0) lod2; urgency=low
 
   * complete rewrite of the browser
 
  -- Claus Stadler <cstadler@informatik.uni-leipzig.de>  Fri, 10 Aug 2012 22:23:31 +0100
-
 
 semmap (0.8.2) lod2; urgency=low
 
